--- a/master/website/board/templates/board3/chart1.html
+++ b/master/website/board/templates/board3/chart1.html
@@ -58,11 +58,11 @@ ul.tabs li.current{
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        <h3>당기투입&nbsp| &nbsp 당기사용</h3>
+                        <h3></h3>
                     </header>
                     <div class="panel-body">
                         <div class="tab-pane" id="chartjs">
-                            <div class="row">
+                            <div claa="row">
                                 <div class="col-lg-10">
                                 </div>
                                 <div class="col-lg-2">
@@ -139,11 +139,13 @@ ul.tabs li.current{
                             </div>
                         </div>
                     </div>
-                </section>
             </div>
-        </div>
     </section>
-    <!--main content end-->
+    </div>
+    <!-- chart morris start -->
+    </div>
+</section>
+<!--main content end-->
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
