Revert "Update Final"
This reverts commit 148e11d085c80e0ed9dc710336af6e46db3d2a58.

--- a/master/website/board/templates/board3/chart1.html
+++ b/master/website/board/templates/board3/chart1.html
@@ -58,17 +58,10 @@ ul.tabs li.current{
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        <h3></h3>
+                        <h3>Chart 1</h3>
                     </header>
                     <div class="panel-body">
                         <div class="tab-pane" id="chartjs">
-                            <div claa="row">
-                                <div class="col-lg-10">
-                                </div>
-                                <div class="col-lg-2">
-                                    <p style="padding-left:10px;">품목조회</p>
-                                </div>
-                            </div>
                             <div class="row">
 
                                 <div class="col-lg-2">
