--- a/master/website/board/templates/board3/chart2.html
+++ b/master/website/board/templates/board3/chart2.html
@@ -26,7 +26,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        <h3>성장률 &nbsp (년/월)</h3>
+                        <h3>Chart 2</h3>
                     </header>
                     <div class="panel-body">
                         <div class="tab-pane" id="chartjs">
