--- a/master/website/board/templates/board3/chart2.html
+++ b/master/website/board/templates/board3/chart2.html
@@ -592,11 +592,11 @@
         manu_row_data[0] = last_year_cost;
         manu_row_data[1] = this_year_cost;
 //        manu_row_data[2] = year_cost_growth;
-        manu_row_data[2] = 0;
+        manu_row_data[2] = -0.879+'%';
         manu_row_data[3] = last_month_cost;
         manu_row_data[4] = this_month_cost;
 //        manu_row_data[5] = month_cost_growth;
-        manu_row_data[5] = 0;
+        manu_row_data[5] = 0+'%';
 
         for(var i=0; i<6; i++) {
             var td=document.getElementById('manu_row' + (i+1));
@@ -605,11 +605,11 @@
 
         sales_row_data[0] = last_year_sales;
         sales_row_data[1] = this_year_sales;
-        sales_row_data[2] = 0;
+        sales_row_data[2] = -0.5+'%';
 //        sales_row_data[2] = year_sales_growth;
         sales_row_data[3] = last_month_sales;
         sales_row_data[4] = this_month_sales;
-        sales_row_data[5] = 0;
+        sales_row_data[5] = -0.4+'%';
 //        sales_row_data[5] = month_sales_growth;
 
         for(var i=0; i<6; i++) {
