--- a/master/website/board/templates/board3/chart2.html
+++ b/master/website/board/templates/board3/chart2.html
@@ -30,7 +30,8 @@
                     </header>
                     <div class="panel-body">
                         <div class="tab-pane" id="chartjs">
-                            <label>품목 리스트</label>
+                            <label>품목조회</label>
+                            <br>
                             <select size="3" id="item_selectbox" onchange="select_item()"></select>
                             <div class="row">
                                 <!-- Line -->
