Update 2phase templates.
Update 2phase templates.

--- a/master/website/board/templates/board2/cc_itempermanucost_if.html
+++ b/master/website/board/templates/board2/cc_itempermanucost_if.html
@@ -102,6 +102,19 @@
             </div>
         </div>
         <div align="right" style="margin-right:2px">
+            <table>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm" onclick="verifyDB()">현재 연결된 DB 확인</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm" onclick="uploadDB()">연결된 DB를 통한 데이터 업로드</button>
+                        </td>
+                    </tr>
+                </table>
+        </div>
+        <br>
+        <div align="right" style="margin-right:2px">
             <a class="btn btn-primary btn-sm" href="javascript:void(0);" onclick="downloadTemplate()" title="Bootstrap 3 themes generator">Template 다운로드</a>
         </div>
         <div align="right" style="margin-top:2px">
