--- a/master/website/board/templates/board3/simulate.html
+++ b/master/website/board/templates/board3/simulate.html
@@ -309,6 +309,10 @@ simulate
                     gridLines: {
                         drawTicks: false,
                         borderDash: [5, 4]
+                    },
+                    scaleLabel: {
+                        display: true,
+                        labelString: '기간(월)'
                     }
                 }],
                 yAxes: [{
@@ -317,6 +321,10 @@ simulate
                     },
                     gridLines: {
                         drawTicks: false,
+                    },
+                    scaleLabel: {
+                        display: true,
+                        labelString: '매출액(원)'
                     }
                 }]
             },
@@ -327,15 +335,22 @@ simulate
         };
 
         var gridLinesColor = new Array(period_list.length);
+        var gridLineWidth = new Array(period_list.length);
+
         for (var i = 1; i <= period_list.length; i++) {
-            if (i == 4) {
+            if (i == 5) {
                 gridLinesColor[gridLinesColor.length - i] = 'red';
+                gridLineWidth[gridLineWidth.length - i] = 3;
+
             }
-            else
+            else {
                 gridLinesColor[gridLinesColor.length - i] = '#E0E0E0';
+                gridLineWidth[gridLineWidth.length - i] = 1;
+            }
         }
 
         simul_opt.scales.xAxes[0].gridLines.color = gridLinesColor;
+        simul_opt.scales.xAxes[0].gridLines.lineWidth = gridLineWidth;
     }
 
     function draw_chart() {
